changed a bunch of trash. ready to start on ui

--- a/www/lib/ionic/scss/_variables.scss
+++ b/www/lib/ionic/scss/_variables.scss
@@ -12,6 +12,12 @@ $assertive:                       #ef4e3a !default;
 $royal:                           #8a6de9 !default;
 $dark:                            #444 !default;
 
+// Indecider Colors
+// -------------------------------
+
+$indecider-orange:                #e04c24 !important;
+$indecider-teal:                  #4bb4a7 !important;
+$indecider-grey:                  #9a9a9a !important;
 
 // Base
 // -------------------------------
