--- a/www/templates/add-friends.html
+++ b/www/templates/add-friends.html
@@ -1,4 +1,4 @@
-<div id="recents">
+<div id="friends">
     <ion-list>
         <ion-checkbox ng-repeat="friend in friends">
             {{friend.username}}
