--- a/www/templates/username.html
+++ b/www/templates/username.html
@@ -1,6 +1,3 @@
-<div id="username">
-    <ion-content>
-        <h4>Add Friends and Start Deciding!</h4>
-        <a href="/recents">recent friends ></a>
-    </ion-content>
-</div>
+<ion-view title="Username">
+
+</ion-view>
