--- a/www/lib/ionic/scss/_variables.scss
+++ b/www/lib/ionic/scss/_variables.scss
@@ -1,23 +1,23 @@
 
-// Colors
-// -------------------------------
-
-$light:                           #fff !default;
-$stable:                          #f8f8f8 !default;
-$positive:                        #4a87ee !default;
-$calm:                            #43cee6 !default;
-$balanced:                        #66cc33 !default;
-$energized:                       #f0b840 !default;
-$assertive:                       #ef4e3a !default;
-$royal:                           #8a6de9 !default;
-$dark:                            #444 !default;
-
 // Indecider Colors
 // -------------------------------
 
 $indecider-orange:                #e04c24 !important;
 $indecider-teal:                  #4bb4a7 !important;
 $indecider-grey:                  #9a9a9a !important;
+
+// Colors
+// -------------------------------
+
+$light:                           #fff !default;
+$stable:                          $indecider-grey !important;
+$positive:                        $indecider-teal !important;
+$calm:                            #43cee6 !default;
+$balanced:                        #66cc33 !default;
+$energized:                       $indecider-orange !important;
+$assertive:                       #ef4e3a !default;
+$royal:                           #8a6de9 !default;
+$dark:                            #444 !default;
 
 // Base
 // -------------------------------
