--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -1,6 +1,6 @@
-<ion-view title="Login">
+<ion-view>
     <ion-content>
-        <h1> INDECIDER FUCK</h1>
+        <h1 class="h1-title">Indecider</h1>
         <div class="list">
             <label class="item item-input">
                 <span class="input-label">Username</span>
