--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -11,8 +11,8 @@
                 <input type="password">
             </label>
         </div>
-        <button class="button button-clear button-energized pull-right">
+        <a href="#/dashboard"><button class="button button-clear button-energized pull-right">
             Next
-        </button>
+        </button></a>
     </ion-content>
 </ion-view>
