--- a/www/lib/ionic/scss/_variables.scss
+++ b/www/lib/ionic/scss/_variables.scss
@@ -10,11 +10,11 @@ $indecider-grey:                  #9a9a9a !important;*/
 // -------------------------------
 
 $light:                           #fff !default;
-$stable:                          #9a9a9a !important;
-$positive:                        #4bb4a7 !important;
+$stable:                          #9a9a9a !default;
+$positive:                        #4bb4a7 !default;
 $calm:                            #43cee6 !default;
 $balanced:                        #66cc33 !default;
-$energized:                       #e04c24 !important;
+$energized:                       #e04c24 !default;
 $assertive:                       #ef4e3a !default;
 $royal:                           #8a6de9 !default;
 $dark:                            #444 !default;
