--- a/www/templates/dashboard.html
+++ b/www/templates/dashboard.html
@@ -1,9 +1,9 @@
 <ion-view>
     <ion-content>
-        <button class="button button-full button-light">
+        <button class="button button-full button-clear button-energized" on-tap="startDec()">
             Start
         </button>
-        <button class="button button-full button-energized">
+        <button class="button button-full button-energized" on-tap="viewDecList()">
             Join
         </button>
     </ion-content>
